# airthings

./: CMakeLists.txt  README.md  airthings.c  airthings.h  app_errors.c  app_errors.h  bluez.c  bluez.h  bluez_scan.c  bluez_scan.h  config_app.c  config_app.h  config_devices.c  config_devices.h  devices.toml  main.c  metrics.c  metrics.h  toml.c  toml.h
